apps/yarr/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/issuer: "letsencrypt-prod"
  name: yarr-ingress
spec:
  tls:
    - hosts:
      - f.icyphox.sh
      secretName: yarr-certs
  rules:
  - host: f.icyphox.sh
    http:
      paths:
      - backend:
          service:
            name: yarr
            port:
              number: 7070
        path: /
        pathType: Prefix
